12 Feb 2000

- Removed ReadFile sub from GD::Graph.pm. I never got around to making
  it part of the interface anyway. replaced by GD::Graph::Data.

09 Feb 2000

- Added GD::Graph::Data to distribution

27 Jan 2000

- Added patch from Hildebrand, which allows non-drawing of accents on
  bars with accent_treshold option
- Fixed rounding problems with overwrite == 2, alert from Hildebrand,
  also a patch supplied which couldn't be used because of other code
  changes related to sample17
- Added sample18, supplied by Hildebrand as illustration of rounding
  problem.
- Fixed off-by one error in pick_data_color whenever color pick is based
  on point instead of data set (cycle_clrs and pie)
- Added accent_treshold option to area charts

09 Jan 2000

- Rewrote some documentation to reflect new GD::Text behaviour.

08 Jan 2000

- Rewrote set method to only accept documented attributes.
- Made sure all documented attributes are part of the %Defaults hashes.
- Changed inheritance slightly, because changing the set method and
  using access to file scoped variables didn't work very well with
  multiple inheritance in mixed and linespoints. All file scoped
  material now is kept in the common ancestor of these, i.e. axestype.

06 Jan 2000

- Added shadow patch from Jeremy Wadsack, changed a few things: Allow
  negative shadows, move his code out a bit more.
- Added color cycling patch from Jeremy. Adapted it to new code, and
  added code to also allow cycling of colour of bar borders.
- Documentation.

05 Jan 2000

- removed all references to perl version from any code. Leaving it up to
  users to find out for themselves. They'll just need to read the
  documentation.
- Applied patch from Jeremy Wadsack fixing text sticking out of pie
  slices causing fills to fail.
- cleanup of code in pie.pm: draw_data, filling front of pie, and
  _get_pie_front_coords.

03 Jan 2000

- Fixed two_axes and negative values
- released 1.22

Dec 1999, mgjv
