@@ -19,7 +19,7 @@ $my_graph->set(
 	y_max_value => 40,
 	y_tick_number => 8,
 	y_label_skip => 2,
-	bar_spacing => 4,
+	bar_spacing => 3,
 
 	accent_treshold => 200,
 );
