@@ -24,6 +24,8 @@ $my_graph->set(
 	line_width => 2,
 	x_label_position => 1/2,
 	r_margin => 15,
+
+	x_labels_vertical => 1,
 );
 
 $my_graph->set_legend('Thanks to Scott Prahl');
