@@ -1,7 +1,19 @@
+14 Feb 2000
+
+- Fixed bug in bar width. Removed some roundings, and always add 1
+  to left boundary. Also, adapt r_margin on the fly to make sure bars
+  are always exactly the same width. This changes the look of graphs
+  slightly, but it looks so much better in general.
+- Fixed bug in drawing of vertical x labels with x_tick_number enabled
+- Cleaned up code in setup_coords in axestype.pm a bit
+
 12 Feb 2000
 
 - Removed ReadFile sub from GD::Graph.pm. I never got around to making
   it part of the interface anyway. replaced by GD::Graph::Data.
+- Rewrote lots, and lots of code. General cleanup. Removal of direct
+  work with data array. Now only works with interface of GD::Graph::Data
+  object (hopefully)
 
 09 Feb 2000
 
